y.output

state 0
	$accept: .translation_unit $end 

	CONST  shift 12
	LET  shift 8
	SET  shift 9
	FUNC  shift 7
	TYPE  shift 13
	.  error

	translation_unit  goto 1
	external_declaration  goto 2
	declaration  goto 3
	function_definition  goto 4
	variable_definition  goto 5
	type_declaration  goto 6
	const_declaration  goto 10
	struct_declaration  goto 11

state 1
	$accept:  translation_unit.$end 
	translation_unit:  translation_unit.external_declaration 

	$end  accept
	CONST  shift 12
	LET  shift 8
	SET  shift 9
	FUNC  shift 7
	TYPE  shift 13
	.  error

	external_declaration  goto 14
	declaration  goto 3
	function_definition  goto 4
	variable_definition  goto 5
	type_declaration  goto 6
	const_declaration  goto 10
	struct_declaration  goto 11

state 2
	translation_unit:  external_declaration.    (16)

	.  reduce 16 (src line 57)


state 3
	external_declaration:  declaration.    (18)

	.  reduce 18 (src line 62)


state 4
	external_declaration:  function_definition.    (19)

	.  reduce 19 (src line 64)


state 5
	external_declaration:  variable_definition.    (20)

	.  reduce 20 (src line 65)


state 6
	declaration:  type_declaration.    (21)

	.  reduce 21 (src line 68)


state 7
	function_definition:  FUNC.IDENTIFIER '(' parameter_list ')' compound_statement 
	function_definition:  FUNC.IDENTIFIER '(' parameter_list ')' type_specifier compound_statement 

	IDENTIFIER  shift 15
	.  error


state 8
	variable_definition:  LET.declarator type_specifier ';' 

	IDENTIFIER  shift 17
	.  error

	declarator  goto 16

state 9
	variable_definition:  SET.declarator type_specifier ';' 

	IDENTIFIER  shift 17
	.  error

	declarator  goto 18

state 10
	type_declaration:  const_declaration.    (22)

	.  reduce 22 (src line 72)


state 11
	type_declaration:  struct_declaration.    (23)

	.  reduce 23 (src line 74)


state 12
	const_declaration:  CONST.'(' consterator_list ')' 
	const_declaration:  CONST.IDENTIFIER '(' consterator_list ')' 

	IDENTIFIER  shift 20
	'('  shift 19
	.  error


state 13
	struct_declaration:  TYPE.IDENTIFIER STRUCT '{' struct_declaration_list '}' ';' 

	IDENTIFIER  shift 21
	.  error


state 14
	translation_unit:  translation_unit external_declaration.    (17)

	.  reduce 17 (src line 59)


state 15
	function_definition:  FUNC IDENTIFIER.'(' parameter_list ')' compound_statement 
	function_definition:  FUNC IDENTIFIER.'(' parameter_list ')' type_specifier compound_statement 

	'('  shift 22
	.  error


state 16
	variable_definition:  LET declarator.type_specifier ';' 
	declarator:  declarator.'[' ']' 
	declarator:  declarator.'<' type_specifier '>' 

	INT8  shift 26
	INT16  shift 27
	INT32  shift 28
	INT64  shift 29
	UINT8  shift 30
	UINT16  shift 31
	UINT32  shift 32
	UINT64  shift 33
	FLOAT32  shift 34
	FLOAT64  shift 35
	BOOL  shift 36
	CHAR  shift 37
	STRING  shift 38
	TYPE_CONST  shift 39
	TYPE_STRUCT  shift 40
	'<'  shift 25
	'['  shift 24
	.  error

	type_specifier  goto 23

state 17
	declarator:  IDENTIFIER.    (135)

	.  reduce 135 (src line 313)


state 18
	variable_definition:  SET declarator.type_specifier ';' 
	declarator:  declarator.'[' ']' 
	declarator:  declarator.'<' type_specifier '>' 

	INT8  shift 26
	INT16  shift 27
	INT32  shift 28
	INT64  shift 29
	UINT8  shift 30
	UINT16  shift 31
	UINT32  shift 32
	UINT64  shift 33
	FLOAT32  shift 34
	FLOAT64  shift 35
	BOOL  shift 36
	CHAR  shift 37
	STRING  shift 38
	TYPE_CONST  shift 39
	TYPE_STRUCT  shift 40
	'<'  shift 25
	'['  shift 24
	.  error

	type_specifier  goto 41

state 19
	const_declaration:  CONST '('.consterator_list ')' 

	IDENTIFIER  shift 44
	.  error

	consterator_list  goto 42
	consterator  goto 43

state 20
	const_declaration:  CONST IDENTIFIER.'(' consterator_list ')' 

	'('  shift 45
	.  error


state 21
	struct_declaration:  TYPE IDENTIFIER.STRUCT '{' struct_declaration_list '}' ';' 

	STRUCT  shift 46
	.  error


state 22
	function_definition:  FUNC IDENTIFIER '('.parameter_list ')' compound_statement 
	function_definition:  FUNC IDENTIFIER '('.parameter_list ')' type_specifier compound_statement 
	parameter_list: .    (28)

	IDENTIFIER  shift 17
	.  reduce 28 (src line 95)

	parameter_list  goto 47
	declarator  goto 48

state 23
	variable_definition:  LET declarator type_specifier.';' 

	';'  shift 49
	.  error


state 24
	declarator:  declarator '['.']' 

	']'  shift 50
	.  error


state 25
	declarator:  declarator '<'.type_specifier '>' 

	INT8  shift 26
	INT16  shift 27
	INT32  shift 28
	INT64  shift 29
	UINT8  shift 30
	UINT16  shift 31
	UINT32  shift 32
	UINT64  shift 33
	FLOAT32  shift 34
	FLOAT64  shift 35
	BOOL  shift 36
	CHAR  shift 37
	STRING  shift 38
	TYPE_CONST  shift 39
	TYPE_STRUCT  shift 40
	.  error

	type_specifier  goto 51

state 26
	type_specifier:  INT8.    (1)

	.  reduce 1 (src line 39)


state 27
	type_specifier:  INT16.    (2)

	.  reduce 2 (src line 41)


state 28
	type_specifier:  INT32.    (3)

	.  reduce 3 (src line 42)


state 29
	type_specifier:  INT64.    (4)

	.  reduce 4 (src line 43)


state 30
	type_specifier:  UINT8.    (5)

	.  reduce 5 (src line 44)


state 31
	type_specifier:  UINT16.    (6)

	.  reduce 6 (src line 45)


state 32
	type_specifier:  UINT32.    (7)

	.  reduce 7 (src line 46)


state 33
	type_specifier:  UINT64.    (8)

	.  reduce 8 (src line 47)


state 34
	type_specifier:  FLOAT32.    (9)

	.  reduce 9 (src line 48)


state 35
	type_specifier:  FLOAT64.    (10)

	.  reduce 10 (src line 49)


state 36
	type_specifier:  BOOL.    (11)

	.  reduce 11 (src line 50)


state 37
	type_specifier:  CHAR.    (12)

	.  reduce 12 (src line 51)


state 38
	type_specifier:  STRING.    (13)

	.  reduce 13 (src line 52)


state 39
	type_specifier:  TYPE_CONST.    (14)

	.  reduce 14 (src line 53)


state 40
	type_specifier:  TYPE_STRUCT.    (15)

	.  reduce 15 (src line 54)


state 41
	variable_definition:  SET declarator type_specifier.';' 

	';'  shift 52
	.  error


state 42
	const_declaration:  CONST '(' consterator_list.')' 
	consterator_list:  consterator_list.',' consterator 

	')'  shift 53
	','  shift 54
	.  error


state 43
	consterator_list:  consterator.    (131)

	.  reduce 131 (src line 303)


state 44
	consterator:  IDENTIFIER.    (133)
	consterator:  IDENTIFIER.'=' constant_expression 

	'='  shift 55
	.  reduce 133 (src line 308)


state 45
	const_declaration:  CONST IDENTIFIER '('.consterator_list ')' 

	IDENTIFIER  shift 44
	.  error

	consterator_list  goto 56
	consterator  goto 43

state 46
	struct_declaration:  TYPE IDENTIFIER STRUCT.'{' struct_declaration_list '}' ';' 

	'{'  shift 57
	.  error


state 47
	function_definition:  FUNC IDENTIFIER '(' parameter_list.')' compound_statement 
	function_definition:  FUNC IDENTIFIER '(' parameter_list.')' type_specifier compound_statement 

	')'  shift 58
	.  error


state 48
	parameter_list:  declarator.type_specifier 
	parameter_list:  declarator.type_specifier ',' parameter_list 
	declarator:  declarator.'[' ']' 
	declarator:  declarator.'<' type_specifier '>' 

	INT8  shift 26
	INT16  shift 27
	INT32  shift 28
	INT64  shift 29
	UINT8  shift 30
	UINT16  shift 31
	UINT32  shift 32
	UINT64  shift 33
	FLOAT32  shift 34
	FLOAT64  shift 35
	BOOL  shift 36
	CHAR  shift 37
	STRING  shift 38
	TYPE_CONST  shift 39
	TYPE_STRUCT  shift 40
	'<'  shift 25
	'['  shift 24
	.  error

	type_specifier  goto 59

state 49
	variable_definition:  LET declarator type_specifier ';'.    (26)

	.  reduce 26 (src line 90)


state 50
	declarator:  declarator '[' ']'.    (136)

	.  reduce 136 (src line 315)


state 51
	declarator:  declarator '<' type_specifier.'>' 

	'>'  shift 60
	.  error


state 52
	variable_definition:  SET declarator type_specifier ';'.    (27)

	.  reduce 27 (src line 92)


state 53
	const_declaration:  CONST '(' consterator_list ')'.    (129)

	.  reduce 129 (src line 298)


state 54
	consterator_list:  consterator_list ','.consterator 

	IDENTIFIER  shift 44
	.  error

	consterator  goto 61

state 55
	consterator:  IDENTIFIER '='.constant_expression 

	IDENTIFIER  shift 84
	INT_CONSTANT  shift 85
	CHAR_CONSTANT  shift 87
	BOOL_CONSTANT  shift 86
	FLOAT_CONSTANT  shift 88
	STRING_CONSTANT  shift 89
	INC_OP  shift 77
	DEC_OP  shift 78
	'('  shift 90
	'+'  shift 81
	'-'  shift 82
	'!'  shift 83
	.  error

	constant_expression  goto 62
	conditional_expression  goto 63
	logical_or_expression  goto 64
	logical_and_expression  goto 65
	inclusive_or_expression  goto 66
	exclusive_or_expression  goto 67
	and_expression  goto 68
	equality_expression  goto 69
	relational_expression  goto 70
	shift_expression  goto 71
	additive_expression  goto 72
	multiplicative_expression  goto 73
	cast_expression  goto 74
	unary_expression  goto 75
	unary_operator  goto 79
	postfix_expression  goto 76
	primary_expression  goto 80

state 56
	const_declaration:  CONST IDENTIFIER '(' consterator_list.')' 
	consterator_list:  consterator_list.',' consterator 

	')'  shift 91
	','  shift 54
	.  error


state 57
	struct_declaration:  TYPE IDENTIFIER STRUCT '{'.struct_declaration_list '}' ';' 

	IDENTIFIER  shift 17
	.  error

	declarator  goto 93
	struct_declaration_list  goto 92

state 58
	function_definition:  FUNC IDENTIFIER '(' parameter_list ')'.compound_statement 
	function_definition:  FUNC IDENTIFIER '(' parameter_list ')'.type_specifier compound_statement 

	INT8  shift 26
	INT16  shift 27
	INT32  shift 28
	INT64  shift 29
	UINT8  shift 30
	UINT16  shift 31
	UINT32  shift 32
	UINT64  shift 33
	FLOAT32  shift 34
	FLOAT64  shift 35
	BOOL  shift 36
	CHAR  shift 37
	STRING  shift 38
	TYPE_CONST  shift 39
	TYPE_STRUCT  shift 40
	'{'  shift 96
	.  error

	compound_statement  goto 94
	type_specifier  goto 95

state 59
	parameter_list:  declarator type_specifier.    (29)
	parameter_list:  declarator type_specifier.',' parameter_list 

	','  shift 97
	.  reduce 29 (src line 97)


state 60
	declarator:  declarator '<' type_specifier '>'.    (137)

	.  reduce 137 (src line 316)


state 61
	consterator_list:  consterator_list ',' consterator.    (132)

	.  reduce 132 (src line 305)


state 62
	consterator:  IDENTIFIER '=' constant_expression.    (134)

	.  reduce 134 (src line 310)


state 63
	constant_expression:  conditional_expression.    (59)

	.  reduce 59 (src line 162)


state 64
	conditional_expression:  logical_or_expression.    (60)
	conditional_expression:  logical_or_expression.'?' expression ':' conditional_expression 
	logical_or_expression:  logical_or_expression.OR_OP logical_and_expression 

	OR_OP  shift 99
	'?'  shift 98
	.  reduce 60 (src line 166)


state 65
	logical_or_expression:  logical_and_expression.    (62)
	logical_and_expression:  logical_and_expression.AND_OP inclusive_or_expression 

	AND_OP  shift 100
	.  reduce 62 (src line 171)


state 66
	logical_and_expression:  inclusive_or_expression.    (64)
	inclusive_or_expression:  inclusive_or_expression.'|' exclusive_or_expression 

	'|'  shift 101
	.  reduce 64 (src line 176)


state 67
	inclusive_or_expression:  exclusive_or_expression.    (66)
	exclusive_or_expression:  exclusive_or_expression.'^' and_expression 

	'^'  shift 102
	.  reduce 66 (src line 181)


state 68
	exclusive_or_expression:  and_expression.    (68)
	and_expression:  and_expression.'&' equality_expression 

	'&'  shift 103
	.  reduce 68 (src line 186)


state 69
	and_expression:  equality_expression.    (70)
	equality_expression:  equality_expression.EQ_OP relational_expression 
	equality_expression:  equality_expression.NE_OP relational_expression 

	EQ_OP  shift 104
	NE_OP  shift 105
	.  reduce 70 (src line 191)


state 70
	equality_expression:  relational_expression.    (72)
	relational_expression:  relational_expression.'<' shift_expression 
	relational_expression:  relational_expression.'>' shift_expression 
	relational_expression:  relational_expression.LE_OP shift_expression 
	relational_expression:  relational_expression.GE_OP shift_expression 

	LE_OP  shift 108
	GE_OP  shift 109
	'<'  shift 106
	'>'  shift 107
	.  reduce 72 (src line 196)


state 71
	relational_expression:  shift_expression.    (75)
	shift_expression:  shift_expression.LEFT_OP additive_expression 
	shift_expression:  shift_expression.RIGHT_OP additive_expression 

	LEFT_OP  shift 110
	RIGHT_OP  shift 111
	.  reduce 75 (src line 202)


state 72
	shift_expression:  additive_expression.    (80)
	additive_expression:  additive_expression.'+' multiplicative_expression 
	additive_expression:  additive_expression.'-' multiplicative_expression 

	'+'  shift 112
	'-'  shift 113
	.  reduce 80 (src line 210)


state 73
	additive_expression:  multiplicative_expression.    (83)
	multiplicative_expression:  multiplicative_expression.'*' cast_expression 
	multiplicative_expression:  multiplicative_expression.'/' cast_expression 
	multiplicative_expression:  multiplicative_expression.'%' cast_expression 

	'*'  shift 114
	'/'  shift 115
	'%'  shift 116
	.  reduce 83 (src line 216)


state 74
	multiplicative_expression:  cast_expression.    (86)

	.  reduce 86 (src line 222)


state 75
	cast_expression:  unary_expression.    (90)

	.  reduce 90 (src line 229)


state 76
	unary_expression:  postfix_expression.    (94)
	postfix_expression:  postfix_expression.'[' expression ']' 
	postfix_expression:  postfix_expression.'(' argument_expression_list ')' 
	postfix_expression:  postfix_expression.'.' IDENTIFIER 
	postfix_expression:  postfix_expression.INC_OP 
	postfix_expression:  postfix_expression.DEC_OP 

	INC_OP  shift 120
	DEC_OP  shift 121
	'('  shift 118
	'['  shift 117
	'.'  shift 119
	.  reduce 94 (src line 239)


state 77
	unary_expression:  INC_OP.unary_expression 

	IDENTIFIER  shift 84
	INT_CONSTANT  shift 85
	CHAR_CONSTANT  shift 87
	BOOL_CONSTANT  shift 86
	FLOAT_CONSTANT  shift 88
	STRING_CONSTANT  shift 89
	INC_OP  shift 77
	DEC_OP  shift 78
	'('  shift 90
	'+'  shift 81
	'-'  shift 82
	'!'  shift 83
	.  error

	unary_expression  goto 122
	unary_operator  goto 79
	postfix_expression  goto 76
	primary_expression  goto 80

state 78
	unary_expression:  DEC_OP.unary_expression 

	IDENTIFIER  shift 84
	INT_CONSTANT  shift 85
	CHAR_CONSTANT  shift 87
	BOOL_CONSTANT  shift 86
	FLOAT_CONSTANT  shift 88
	STRING_CONSTANT  shift 89
	INC_OP  shift 77
	DEC_OP  shift 78
	'('  shift 90
	'+'  shift 81
	'-'  shift 82
	'!'  shift 83
	.  error

	unary_expression  goto 123
	unary_operator  goto 79
	postfix_expression  goto 76
	primary_expression  goto 80

state 79
	unary_expression:  unary_operator.cast_expression 

	IDENTIFIER  shift 84
	INT_CONSTANT  shift 85
	CHAR_CONSTANT  shift 87
	BOOL_CONSTANT  shift 86
	FLOAT_CONSTANT  shift 88
	STRING_CONSTANT  shift 89
	INC_OP  shift 77
	DEC_OP  shift 78
	'('  shift 90
	'+'  shift 81
	'-'  shift 82
	'!'  shift 83
	.  error

	cast_expression  goto 124
	unary_expression  goto 75
	unary_operator  goto 79
	postfix_expression  goto 76
	primary_expression  goto 80

state 80
	postfix_expression:  primary_expression.    (98)

	.  reduce 98 (src line 246)


state 81
	unary_operator:  '+'.    (91)

	.  reduce 91 (src line 233)


state 82
	unary_operator:  '-'.    (92)

	.  reduce 92 (src line 235)


state 83
	unary_operator:  '!'.    (93)

	.  reduce 93 (src line 236)


state 84
	primary_expression:  IDENTIFIER.    (104)

	.  reduce 104 (src line 255)


state 85
	primary_expression:  INT_CONSTANT.    (105)

	.  reduce 105 (src line 257)


state 86
	primary_expression:  BOOL_CONSTANT.    (106)

	.  reduce 106 (src line 258)


state 87
	primary_expression:  CHAR_CONSTANT.    (107)

	.  reduce 107 (src line 259)


state 88
	primary_expression:  FLOAT_CONSTANT.    (108)

	.  reduce 108 (src line 260)


state 89
	primary_expression:  STRING_CONSTANT.    (109)

	.  reduce 109 (src line 261)


state 90
	primary_expression:  '('.expression ')' 

	IDENTIFIER  shift 84
	INT_CONSTANT  shift 85
	CHAR_CONSTANT  shift 87
	BOOL_CONSTANT  shift 86
	FLOAT_CONSTANT  shift 88
	STRING_CONSTANT  shift 89
	INC_OP  shift 77
	DEC_OP  shift 78
	'('  shift 90
	'+'  shift 81
	'-'  shift 82
	'!'  shift 83
	.  error

	expression  goto 125
	conditional_expression  goto 127
	logical_or_expression  goto 64
	logical_and_expression  goto 65
	inclusive_or_expression  goto 66
	exclusive_or_expression  goto 67
	and_expression  goto 68
	equality_expression  goto 69
	relational_expression  goto 70
	shift_expression  goto 71
	additive_expression  goto 72
	multiplicative_expression  goto 73
	cast_expression  goto 74
	unary_expression  goto 128
	unary_operator  goto 79
	postfix_expression  goto 76
	primary_expression  goto 80
	assignment_expression  goto 126

state 91
	const_declaration:  CONST IDENTIFIER '(' consterator_list ')'.    (130)

	.  reduce 130 (src line 300)


state 92
	struct_declaration:  TYPE IDENTIFIER STRUCT '{' struct_declaration_list.'}' ';' 
	struct_declaration_list:  struct_declaration_list.',' declarator type_specifier 

	','  shift 130
	'}'  shift 129
	.  error


state 93
	struct_declaration_list:  declarator.type_specifier 
	declarator:  declarator.'[' ']' 
	declarator:  declarator.'<' type_specifier '>' 

	INT8  shift 26
	INT16  shift 27
	INT32  shift 28
	INT64  shift 29
	UINT8  shift 30
	UINT16  shift 31
	UINT32  shift 32
	UINT64  shift 33
	FLOAT32  shift 34
	FLOAT64  shift 35
	BOOL  shift 36
	CHAR  shift 37
	STRING  shift 38
	TYPE_CONST  shift 39
	TYPE_STRUCT  shift 40
	'<'  shift 25
	'['  shift 24
	.  error

	type_specifier  goto 131

state 94
	function_definition:  FUNC IDENTIFIER '(' parameter_list ')' compound_statement.    (24)

	.  reduce 24 (src line 82)


state 95
	function_definition:  FUNC IDENTIFIER '(' parameter_list ')' type_specifier.compound_statement 

	'{'  shift 96
	.  error

	compound_statement  goto 132

state 96
	compound_statement:  '{'.'}' 
	compound_statement:  '{'.block_item_list '}' 

	IDENTIFIER  shift 145
	INT_CONSTANT  shift 85
	CHAR_CONSTANT  shift 87
	BOOL_CONSTANT  shift 86
	FLOAT_CONSTANT  shift 88
	STRING_CONSTANT  shift 89
	INC_OP  shift 77
	DEC_OP  shift 78
	CONST  shift 12
	LET  shift 8
	SET  shift 9
	TYPE  shift 13
	CASE  shift 146
	DEFAULT  shift 147
	IF  shift 150
	SWITCH  shift 151
	FOR  shift 152
	GOTO  shift 153
	CONTINUE  shift 154
	BREAK  shift 155
	RETURN  shift 156
	'('  shift 90
	';'  shift 148
	'{'  shift 96
	'}'  shift 133
	'+'  shift 81
	'-'  shift 82
	'!'  shift 83
	.  error
